--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@trpc/next": "10.0.0-rc.0",
     "@trpc/react-query": "10.0.0-rc.0",
     "@trpc/server": "10.0.0-rc.0",
+    "clsx": "^1.2.1",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "next": "12.3.1",
