--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@headlessui/react": "^1.7.3",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.5.0",
-    "@tanstack/react-query": "^4.10.0",
+    "@tanstack/react-query": "^4.13.4",
     "@trpc/client": "10.0.0-rc.0",
     "@trpc/next": "10.0.0-rc.0",
     "@trpc/react-query": "10.0.0-rc.0",
@@ -33,6 +33,7 @@
     "zustand": "^4.1.3"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^4.13.4",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
