--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "NODE_ENV=development next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
     "@floating-ui/react-dom": "^1.0.0",
@@ -20,7 +21,6 @@
     "@trpc/react-query": "10.0.0-rc.0",
     "@trpc/server": "10.0.0-rc.0",
     "clsx": "^1.2.1",
-    "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "next": "12.3.1",
     "next-auth": "^4.15.0",
@@ -33,6 +33,7 @@
     "zustand": "^4.1.3"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.0.0",
     "@tanstack/react-query-devtools": "^4.13.4",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
